--- a/.github/workflows/cowsay.yml
+++ b/.github/workflows/cowsay.yml
@@ -1,40 +1,43 @@
 ---
 
-    name: create a cowsay
-    
-    on:
-        workflow_dispatch:
-        push:
-    
-    jobs:
-        build:
-            runs-on: ubuntu-24.04
-            environment: PROD
-            steps:
-                - name: output pipeline
-                  id: cowsay_output_id
-                  uses: Code-Hex/neo-cowsay-action@v1
-                  with:
-                    message: ${{ vars.COWSAY_MESSAGE}}
-                    cow: 'gopher'
-                    cowsay_to_output: 'cowsay'
-                - name: print output
-                  run:
-                    echo "${{ steps.cowsay_output_id.outputs.cowsay }}" > cowsay.txt
-                - name: test output
-                  run: |
-                    grep "_,,_" cowsay.txt
-                - name: Upload static files as artifact
-                  id: deployment
-                  uses: actions/upload-artifact@v4
-                  with:
-                    path: cowsay.txt
-                    name: mycow
-        deploy:
-            runs-on: self-hosted
-            needs: build
-            steps:
-                - uses: actions/download-artifact@v4
-                  with:
-                    path: /var/html/
-                    name: mycow
+  name: generate a cowsay
+  
+  on:
+    workflow_dispatch:
+    push:
+  
+  jobs:
+    build:
+      runs-on: ubuntu-24.04
+      environment: PROD
+      steps:
+        - name: output pipeline
+          id: cowsay_output_id # You want id
+          uses: Code-Hex/neo-cowsay-action@v1
+          with:
+            message: ${{ vars.COWSAY_MESSAGE }}
+            cow: 'gopher' # ascii art list: https://github.com/Code-Hex/Neo-cowsay/tree/master/cows
+            cowsay_to_output: 'cowsay'
+        - name: print output
+          run: |
+            echo "${{ steps.cowsay_output_id.outputs.cowsay }}" > cowsay.txt
+        
+        - name: test output
+          run: |
+            grep "_,,_" cowsay.txt
+        
+        - name: Upload static files as artifact
+          id: deployment
+          uses: actions/upload-artifact@v4 # or specific "vX.X.X" version tag for this action
+          with:
+            path: cowsay.txt
+            name: notrevache
+  
+    deploy:
+      runs-on: self-hosted
+      needs: build
+      steps:
+        - uses: actions/download-artifact@v4
+          with:
+            path: /var/www/html/
+            name: notrevache
